--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,10 +15,9 @@ dependencies = [
     "tabulate (>=0.9.0,<0.10.0)",
     "colorama (>=0.4.6,<0.5.0)",
     "click>=8.1.8,<9.0.0",
+    "platformdirs>=4.3.8",
 ]
 
-[tool.poetry]
-packages = [{include = "caltool", from = "src"}]
 [project.scripts]
 caltool = "caltool.cli:cli"
 
