--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,10 +21,6 @@ dependencies = [
 [project.scripts]
 caltool = "caltool.cli:cli"
 
-
-[tool.poetry.group.dev.dependencies]
-pytest = "^8.3.5"
-
 [tool.ruff]
 # Exclude a variety of commonly ignored directories.
 exclude = [
@@ -104,8 +100,8 @@ docstring-code-format = false
 docstring-code-line-length = "dynamic"
 
 [build-system]
-requires = ["poetry-core>=2.0.0,<3.0.0"]
-build-backend = "poetry.core.masonry.api"
+requires = ["hatchling"]
+build-backend = "hatchling.build"
 
 [dependency-groups]
 dev = [
