feat: Complete Phase 7-8 - Package rename and test migration
Phase 7-8: Full migration from caltool to gtool

- Updated pyproject.toml: name='gtool', version='0.2.0', entry point='gtool.cli.main:cli'
- Updated all test imports: caltool.* → gtool.* layers
- Updated class references: GCalClientV2→CalendarClient, GMailClientV2→GmailClient
- Updated all test patches to use gtool paths
- Updated environment variables: CALTOOL_ → GTOOL_
- Deleted old src/caltool/ directory

Results: 95/95 tests passing, 80% coverage, gtool CLI working

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
-name = "caltool"
-version = "0.1.0"
+name = "gtool"
+version = "0.2.0"
 description = ""
 authors = [
     {name = "Steffen Vulpius",email = "steffen.vulpius+github@gmail.com"}
@@ -19,7 +19,7 @@ dependencies = [
 ]
 
 [project.scripts]
-caltool = "caltool.cli:cli"
+gtool = "gtool.cli.main:cli"
 
 [tool.ruff]
 # Exclude a variety of commonly ignored directories.
