--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ dependencies = [
     "colorama (>=0.4.6,<0.5.0)",
     "click>=8.1.8,<9.0.0",
     "platformdirs>=4.3.8",
+    "setuptools>=65.0.0",  # Provides distutils compatibility for Python 3.12+
 ]
 
 [project.scripts]
